test/src/e2e_vm_tests/test_programs/should_fail/for_bad_iterator/src/main.sw
library;

struct Vec<T> {}

pub fn main() {
    let vector = Vec::<u64> {};

    for _n in vector {
    }
}
